syntax = "proto3";

package dnf.v1;

option java_multiple_files = true;
option java_outer_classname = "AdventureProto";
option java_package = "com.dnfm.mina.protobuf";
option go_package = "dnf/v1";

import "google/api/annotations.proto";

message AdventureUnionInfoRequest {
}

message AdventureUnionInfoResponse {
  int32 error = 1;
  uint64 exp = 2;
  uint32 level = 3;
  uint32 day = 4;
  uint64 typicalcharacterguid = 5;
  string name = 6;
  uint64 updatetime = 7;
  uint64 lastchangenametime = 8;
  AdventureUnionExpedition expedition = 9;
  repeated AdventureUnionExpedition expeditions = 10;
  repeated AdventureUnionCollection collections = 11;
  repeated AdventureUnionCollectionSlot collectionslots = 12;
  uint32 shareboardbackground = 13;
  uint32 shareboardframe = 14;
  repeated AdventureUnionShareboardSlot shareboardslotlist = 15;
  repeated AdventureUnionShareboardBackground shareboardbackgroundlist = 16;
  repeated AdventureUnionShareboardFrame shareboardframelist = 17;
  bool shareboardshowantievilscore = 18;
  uint32 autosearchcount = 19;
  repeated uint32 receivedcollectionrewards = 20;
  repeated AdventureUnionLevelReward levelrewards = 21;
  uint32 shareboardtotalantievilscore = 22;
  bool shareboardantievilscorerefresh = 23;
  bool isadventureCondition = 24;
}

message AdventureUnionExpedition {
  uint32 expedition_id = 1;
  uint32 expedition_type = 2;
  uint32 status = 3;
  uint64 start_time = 4;
  uint64 end_time = 5;
}

message AdventureUnionCollection {
  uint32 collection_id = 1;
  uint32 progress = 2;
  bool completed = 3;
}

message AdventureUnionCollectionSlot {
  uint32 slot_id = 1;
  uint32 slot_type = 2;
}

message AdventureUnionShareboardSlot {
  uint32 slot_id = 1;
  uint32 slot_type = 2;
  uint32 item_id = 3;
  uint32 item_count = 4;
  bool show = 5;
}

message AdventureUnionShareboardBackground {
  uint32 background_id = 1;
  string name = 2;
}

message AdventureUnionShareboardFrame {
  uint32 frame_id = 1;
  string name = 2;
}

message AdventureUnionLevelReward {
  uint32 level = 1;
  uint32 reward_type = 2;
  uint32 reward_index = 3;
  uint32 reward_count = 4;
  bool claimed = 5;
}

message AdventureUnionNameChangeRequest {
  string field_1 = 1;
}

message AdventureUnionNameChangeResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionExpeditionStartRequest {
  int32 field_1 = 1;
  int32 field_2 = 2;
}

message AdventureUnionExpeditionStartResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionExpeditionCancelRequest {
  int32 field_1 = 1;
}

message AdventureUnionExpeditionCancelResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionExpeditionRewardRequest {
  int32 field_1 = 1;
}

message AdventureUnionExpeditionRewardResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionSubdueInfoRequest {
}

message AdventureUnionSubdueInfoResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionSubdueStartRequest {
  int32 field_1 = 1;
  int32 field_2 = 2;
  uint64 field_3 = 3;
}

message AdventureUnionSubdueStartResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionSubdueRewardRequest {
  int32 field_1 = 1;
}

message AdventureUnionSubdueRewardResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionOpenShareboardSlotRequest {
  int32 field_1 = 1;
}

message AdventureUnionOpenShareboardSlotResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionSetShareboardRequest {
  int32 field_1 = 1;
  int32 field_2 = 2;
  bool field_4 = 4;
}

message AdventureUnionSetShareboardResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureReapInfoRequest {
}

message AdventureReapInfoResponse {
  repeated ReapReward rewards = 1;
  uint64 starttime = 2;
  int32 error = 3;
}

message ReapReward {
  uint32 reward_type = 1;
  uint32 reward_index = 2;
  uint32 reward_count = 3;
}

message AdventureReapRewardRequest {
  int32 field_1 = 1;
}

message AdventureReapRewardResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionSearchStartRequest {
}

message AdventureUnionSearchStartResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionCollectionRewardRequest {
  int32 field_1 = 1;
}

message AdventureUnionCollectionRewardResponse {
  int32 error = 1;
  uint64 transId = 2;
}

message AdventureUnionLevelRewardRequest {
  int32 field_1 = 1;
}

message AdventureUnionLevelRewardResponse {
  int32 error = 1;
  uint64 transId = 2;
}
