#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
è¿ç§»å†å²è®°å½•ç³»ç»Ÿ
è®°å½•å’Œç®¡ç†JProtobufåˆ°æ ‡å‡†Protobufçš„è¿ç§»å†å²
"""

import sqlite3
import re
from pathlib import Path
from typing import Dict, List, Optional
from datetime import datetime

class MigrationHistorySystem:
    """è¿ç§»å†å²è®°å½•ç³»ç»Ÿ"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
        self.project_root = Path('/home/pix/dev/code/java/DnfGameServer')
        self.batch_docs_dir = self.project_root / 'devdoc' / 'protobuf'
    
    def _connect(self):
        """è¿æ¥æ•°æ®åº“"""
        return sqlite3.connect(self.db_path)
    
    def import_batch_from_docs(self, batch_dir: Path) -> Optional[int]:
        """ä»æ‰¹æ¬¡æ–‡æ¡£å¯¼å…¥è¿ç§»è®°å½•"""
        batch_match = re.search(r'batch_(\d+)', batch_dir.name)
        if not batch_match:
            return None
        
        batch_number = int(batch_match.group(1))
        
        # æ£€æŸ¥æ‰¹æ¬¡è®¡åˆ’æ–‡ä»¶
        plan_file = batch_dir / '01_è¿ç§»è®¡åˆ’.md'
        if not plan_file.exists():
            return None
        
        # è¯»å–æ‰¹æ¬¡è®¡åˆ’
        with open(plan_file, 'r', encoding='utf-8') as f:
            plan_content = f.read()
        
        # æå–æ‰¹æ¬¡ä¿¡æ¯
        batch_name = None
        description = None
        
        # å°è¯•æå–æ¨¡å—åç§°
        module_match = re.search(r'æ¨¡å—åç§°[:ï¼š]\s*([^\n]+)', plan_content)
        if module_match:
            batch_name = module_match.group(1).strip()
        
        # æ£€æŸ¥æ‰¹æ¬¡ç»“æœæ–‡ä»¶
        result_file = batch_dir / '02_è¿ç§»ç»“æœ.md'
        if result_file.exists():
            with open(result_file, 'r', encoding='utf-8') as f:
                result_content = f.read()
            
            # æå–è¿ç§»çŠ¶æ€
            status_match = re.search(r'è¿ç§»çŠ¶æ€[:ï¼š]\s*([^\n]+)', result_content)
            if status_match:
                status_text = status_match.group(1).strip()
                if 'å®Œæˆ' in status_text or 'âœ…' in status_text:
                    status = 'completed'
                elif 'è¿›è¡Œä¸­' in status_text or 'â³' in status_text:
                    status = 'in_progress'
                elif 'å¤±è´¥' in status_text or 'âŒ' in status_text:
                    status = 'failed'
                else:
                    status = 'pending'
            else:
                status = 'completed'
            
            # æå–è¿ç§»æ—¥æœŸ
            date_match = re.search(r'è¿ç§»æ—¥æœŸ[:ï¼š]\s*([^\n]+)', result_content)
            if date_match:
                try:
                    migration_date = datetime.strptime(date_match.group(1).strip(), '%Y-%m-%d').isoformat()
                except:
                    migration_date = datetime.now().isoformat()
            else:
                migration_date = datetime.now().isoformat()
        else:
            status = 'pending'
            migration_date = datetime.now().isoformat()
        
        # ä¿å­˜æ‰¹æ¬¡ä¿¡æ¯
        conn = self._connect()
        cursor = conn.cursor()
        
        # æ£€æŸ¥æ‰¹æ¬¡æ˜¯å¦å·²å­˜åœ¨
        cursor.execute('''
            SELECT id FROM migration_batches
            WHERE batch_number = ?
        ''', (batch_number,))
        
        existing = cursor.fetchone()
        
        if existing:
            batch_id = existing[0]
            # æ›´æ–°
            cursor.execute('''
                UPDATE migration_batches
                SET batch_name = ?, description = ?, status = ?,
                    end_time = ?, updated_at = CURRENT_TIMESTAMP
                WHERE id = ?
            ''', (batch_name, description, status, migration_date, batch_id))
        else:
            # æ’å…¥
            cursor.execute('''
                INSERT INTO migration_batches
                (batch_number, batch_name, description, status, start_time, end_time)
                VALUES (?, ?, ?, ?, ?, ?)
            ''', (batch_number, batch_name, description, status, migration_date, migration_date))
            batch_id = cursor.lastrowid
        
        # æå–è¿ç§»çš„æ¶ˆæ¯
        migrated_messages = self._extract_migrated_messages(result_file if result_file.exists() else plan_file)
        
        # ä¿å­˜è¿ç§»è®°å½•
        for jprotobuf_name in migrated_messages:
            # è·å–JProtobufæ¶ˆæ¯ID
            cursor.execute('''
                SELECT id FROM jprotobuf_messages
                WHERE message_name = ?
            ''', (jprotobuf_name,))
            
            jprotobuf_result = cursor.fetchone()
            if not jprotobuf_result:
                continue
            
            jprotobuf_id = jprotobuf_result[0]
            
            # æŸ¥æ‰¾å¯¹åº”çš„Protoæ¶ˆæ¯ID
            cursor.execute('''
                SELECT proto_message_id FROM message_mappings
                WHERE jprotobuf_message_id = ?
            ''', (jprotobuf_id,))
            
            mapping_result = cursor.fetchone()
            proto_id = mapping_result[0] if mapping_result else None
            
            # æ£€æŸ¥è¿ç§»è®°å½•æ˜¯å¦å·²å­˜åœ¨
            cursor.execute('''
                SELECT id FROM migration_records
                WHERE batch_id = ? AND jprotobuf_message_id = ?
            ''', (batch_id, jprotobuf_id))
            
            record_existing = cursor.fetchone()
            
            if not record_existing:
                # æ’å…¥è¿ç§»è®°å½•
                cursor.execute('''
                    INSERT INTO migration_records
                    (batch_id, jprotobuf_message_id, proto_message_id, migration_status)
                    VALUES (?, ?, ?, ?)
                ''', (batch_id, jprotobuf_id, proto_id, 'migrated' if proto_id else 'pending'))
        
        # æ·»åŠ å†å²è®°å½•
        cursor.execute('''
            INSERT INTO migration_history
            (batch_id, action_type, action_description, performed_by)
            VALUES (?, ?, ?, ?)
        ''', (batch_id, 'import', f'Imported batch {batch_number} from documents', 'system'))
        
        # æ›´æ–°æ‰¹æ¬¡ç»Ÿè®¡
        cursor.execute('''
            UPDATE migration_batches
            SET jprotobuf_count = (
                SELECT COUNT(*) FROM migration_records
                WHERE batch_id = ?
            ),
            proto_count = (
                SELECT COUNT(*) FROM migration_records
                WHERE batch_id = ? AND proto_message_id IS NOT NULL
            )
            WHERE id = ?
        ''', (batch_id, batch_id, batch_id))
        
        conn.commit()
        conn.close()
        
        return batch_id
    
    def _extract_migrated_messages(self, doc_file: Path) -> List[str]:
        """ä»æ–‡æ¡£ä¸­æå–è¿ç§»çš„æ¶ˆæ¯"""
        with open(doc_file, 'r', encoding='utf-8') as f:
            content = f.read()
        
        messages = []
        
        # ä»è¡¨æ ¼ä¸­æå–æ¶ˆæ¯å
        table_pattern = r'\|\s*([A-Z_]+\.java)\s*\|'
        for match in re.finditer(table_pattern, content):
            message_name = match.group(1).replace('.java', '')
            if message_name.startswith(('REQ_', 'RES_', 'PT_')):
                messages.append(message_name)
        
        return messages
    
    def import_all_batches(self):
        """å¯¼å…¥æ‰€æœ‰æ‰¹æ¬¡"""
        print("ğŸ” å¯¼å…¥æ‰€æœ‰æ‰¹æ¬¡...")
        print()
        
        batch_dirs = sorted(self.batch_docs_dir.glob('batch_*'))
        total_batches = len(batch_dirs)
        
        imported = 0
        updated = 0
        skipped = 0
        
        for i, batch_dir in enumerate(batch_dirs, 1):
            print(f"  å¤„ç†æ‰¹æ¬¡: {batch_dir.name} ({i}/{total_batches})")
            
            batch_id = self.import_batch_from_docs(batch_dir)
            
            if batch_id:
                imported += 1
            else:
                skipped += 1
        
        print()
        print(f"  å¯¼å…¥: {imported} ä¸ªæ‰¹æ¬¡")
        print(f"  è·³è¿‡: {skipped} ä¸ªæ‰¹æ¬¡")
        print()
        
        print("âœ… æ‰¹æ¬¡å¯¼å…¥å®Œæˆï¼")
        print()
    
    def get_migration_history(self, limit: int = 50) -> List[Dict]:
        """è·å–è¿ç§»å†å²"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT 
                mh.id,
                mb.batch_number,
                mb.batch_name,
                mh.action_type,
                mh.action_description,
                mh.performed_by,
                mh.created_at
            FROM migration_history mh
            LEFT JOIN migration_batches mb ON mh.batch_id = mb.id
            ORDER BY mh.created_at DESC
            LIMIT ?
        ''', (limit,))
        
        history = []
        for row in cursor.fetchall():
            history.append({
                'id': row[0],
                'batch_number': row[1],
                'batch_name': row[2],
                'action_type': row[3],
                'action_description': row[4],
                'performed_by': row[5],
                'created_at': row[6]
            })
        
        conn.close()
        
        return history
    
    def get_message_migration_history(self, message_name: str) -> List[Dict]:
        """è·å–æ¶ˆæ¯çš„è¿ç§»å†å²"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT 
                mr.id,
                mb.batch_number,
                mb.batch_name,
                jm.message_name as jprotobuf_name,
                pm.message_name as proto_name,
                mr.migration_status,
                mr.migration_reason,
                mr.created_at
            FROM migration_records mr
            LEFT JOIN migration_batches mb ON mr.batch_id = mb.id
            LEFT JOIN jprotobuf_messages jm ON mr.jprotobuf_message_id = jm.id
            LEFT JOIN proto_messages pm ON mr.proto_message_id = pm.id
            WHERE jm.message_name = ?
            ORDER BY mr.created_at DESC
        ''', (message_name,))
        
        history = []
        for row in cursor.fetchall():
            history.append({
                'id': row[0],
                'batch_number': row[1],
                'batch_name': row[2],
                'jprotobuf_name': row[3],
                'proto_name': row[4],
                'migration_status': row[5],
                'migration_reason': row[6],
                'created_at': row[7]
            })
        
        conn.close()
        
        return history

def main():
    """ä¸»å‡½æ•°"""
    import argparse
    
    parser = argparse.ArgumentParser(description='è¿ç§»å†å²è®°å½•ç³»ç»Ÿ')
    parser.add_argument('--import-all', action='store_true', help='å¯¼å…¥æ‰€æœ‰æ‰¹æ¬¡')
    parser.add_argument('--history', action='store_true', help='æŸ¥çœ‹è¿ç§»å†å²')
    parser.add_argument('--message', type=str, help='æŸ¥çœ‹æ¶ˆæ¯çš„è¿ç§»å†å²')
    
    args = parser.parse_args()
    
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    system = MigrationHistorySystem(db_path)
    
    if args.import_all:
        system.import_all_batches()
    elif args.history:
        history = system.get_migration_history()
        print("ğŸ“œ è¿ç§»å†å²:")
        print("=" * 80)
        for record in history:
            print(f"  æ‰¹æ¬¡: {record['batch_number']} - {record['batch_name']}")
            print(f"  æ“ä½œ: {record['action_type']}")
            print(f"  æè¿°: {record['action_description']}")
            print(f"  æ—¶é—´: {record['created_at']}")
            print()
    elif args.message:
        history = system.get_message_migration_history(args.message)
        print(f"ğŸ“œ æ¶ˆæ¯ {args.message} çš„è¿ç§»å†å²:")
        print("=" * 80)
        if history:
            for record in history:
                print(f"  æ‰¹æ¬¡: {record['batch_number']} - {record['batch_name']}")
                print(f"  çŠ¶æ€: {record['migration_status']}")
                print(f"  Proto: {record['proto_name']}")
                print(f"  æ—¶é—´: {record['created_at']}")
                print()
        else:
            print("  æœªæ‰¾åˆ°è¿ç§»è®°å½•")
    else:
        parser.print_help()

if __name__ == '__main__':
    main()
